Fix an inconsistent behavior in BrowserCommandController

An inconsistent behavior has been detected in BrowserCommandController, which
disables IDC_OPTIONS when entering and exiting fullscreen mode unexpectedly.
This change fixes the issue, and adds a test case to indicate this inconsistent
behavior, and make it more "visible".

R=msw

BUG=694331

Review-Url: https://codereview.chromium.org/2701973002
Cr-Commit-Position: refs/heads/master@{#452703}

Former-commit-id: db473d55d6bc0c1caca424616a788ca0c19a4d69